# transmission-mountainlion

./: CMakeLists.txt  CMakePresets.json  README.md
cmake/: FilterXibStrings.pl  MacOS108Toolchain.cmake  MacOSLegacyToolchain.cmake  TrMacros.cmake
docs/: Building-Transmission.md  Peer-ID-and-User-Agent.md  macOS-10.6.md  macOS-10.8.md
libtransmission/: CMakeLists.txt  announced-client-identity.cc  announced-client-identity.h  announcer-common.h  announcer-http.cc  announcer.cc  interned-string.h  net.cc  peer-msgs.cc  string-utils.mm  torrent.cc  torrent.h  transmission.h  web.cc  web.h
macosx/: AddMagnetWindowController.mm  AddWindowController.mm  BadgeView.mm  Badger.mm  BlocklistDownloader.h  BlocklistDownloader.mm  ButtonToolbarItem.mm  CMakeLists.txt  CocoaCompatibility.h  CocoaCompatibility.mm  ColorTextField.mm  Controller.h  Controller.mm  CreatorWindowController.mm  DragOverlayWindow.h  DragOverlayWindow.mm  FileCheckCellView.h  FileCheckCellView.mm  FileListNode.h  FileNameCellView.h  FileNameCellView.mm  FileOutlineController.mm  FilePriorityCellView.h  FilePriorityCellView.mm  FileRenameSheetController.mm  FilterBar.xib  FilterBarController.h  FilterBarController.mm  GroupCell.mm  GroupToolbarItem.mm  GroupsController.h  GroupsController.mm  GroupsPrefsController.mm  Info.plist.in  InfoActivityViewController.h  InfoActivityViewController.mm  InfoFileView.xib  InfoFileViewController.h  InfoFileViewController.mm  InfoGeneralViewController.h  (+82 more)
macosx/Base.lproj/: AddMagnetWindow.xib  AddWindow.xib  Creator.xib  GlobalOptionsPopover.xib  GroupRules.xib  InfoActivityView.xib  InfoGeneralView.xib  InfoOptionsView.xib  MainMenu.xib  PrefsWindow.xib
macosx/LegacyXibs/: FilterBar.xib  StatsWindow.xib
macosx/LegacyXibs/Base.lproj/: MainMenu.xib
macosx/MountainLionXibs/Base.lproj/: InfoActivityView.xib  InfoOptionsView.xib
macosx/QuickLookExtension/: PreviewProvider.mm
macosx/QuickLookPlugin/: GeneratePreviewForURL.mm
macosx/SnowLeopardXibs/: FilterBar.xib  InfoWindow.xib  StatusBar.xib
macosx/SnowLeopardXibs/Base.lproj/: MainMenu.xib  PrefsWindow.xib
macosx/VDKQueue/: VDKQueue.h  VDKQueue.mm
macosx/af.lproj/: Localizable.strings  PrefsWindow.strings
macosx/da.lproj/: Localizable.strings  PrefsWindow.strings
macosx/de.lproj/: Localizable.strings  PrefsWindow.strings
macosx/el.lproj/: Localizable.strings  PrefsWindow.strings
macosx/en.lproj/: Localizable.strings
macosx/es.lproj/: Localizable.strings  PrefsWindow.strings
macosx/eu.lproj/: Localizable.strings  PrefsWindow.strings
macosx/fr.lproj/: Localizable.strings  PrefsWindow.strings
macosx/he.lproj/: Localizable.strings  PrefsWindow.strings
macosx/hu.lproj/: Localizable.strings  PrefsWindow.strings
macosx/it.lproj/: Localizable.strings  PrefsWindow.strings
macosx/ja.lproj/: Localizable.strings  PrefsWindow.strings
macosx/nl.lproj/: Localizable.strings  PrefsWindow.strings
macosx/pl.lproj/: Localizable.strings  PrefsWindow.strings
macosx/pt-BR.lproj/: Localizable.strings  PrefsWindow.strings
macosx/pt-PT.lproj/: Localizable.strings  PrefsWindow.strings
macosx/ru.lproj/: Localizable.strings  PrefsWindow.strings
macosx/sv.lproj/: Localizable.strings  PrefsWindow.strings
macosx/tr.lproj/: Localizable.strings  PrefsWindow.strings
macosx/uk.lproj/: Localizable.strings  PrefsWindow.strings
macosx/zh-CN.lproj/: Localizable.strings  PrefsWindow.strings
macosx/zh-TW.lproj/: Localizable.strings  PrefsWindow.strings
tests/libtransmission/: CMakeLists.txt  announced-client-identity-test.cc
